Fix horizontal scroll for 375 resolution

--- a/styles/style.css
+++ b/styles/style.css
@@ -132,7 +132,6 @@
 }
 
 .article-title {
-  width: clamp(23.188rem, 30.516vw + 16.035rem, 43.5rem);
   font-variation-settings: 'wght' var(--font-weight-bold);
   min-height: 31px;
   display: flex;
@@ -153,11 +152,9 @@
   flex-direction: column;
   gap: 27px;
   padding: 25px;
-  width: clamp(23.188rem, 30.516vw + 16.035rem, 43.5rem);
 }
 
 .article-text {
-  width: clamp(20.063rem, 30.516vw + 12.91rem, 40.375rem);
   font-variation-settings: 'wght' var(--font-weight-normal);
   font-size: 18px;
   line-height: 1.16;
